docs/tests/syntax/bad/testfile-if_else-1.cpp
void m() { if (true) ; else }
